# mtg-card-scanner

./: .gitattributes  README.md
simulation/python_scanner/: pyproject.toml
simulation/python_scanner/src/python_scanner/: __main__.py  card_scanner.py  contour_find.py  edge_detect.py  line_detect.py  preprocess.py  python_scanner.py  text_extract.py  title_extract.py
test/: generate_data.py  plot_results.py  run_tests.py
test/data/: cards.csv
test/input/: cards.csv  short_cards.csv  short_tests.csv  tests.csv
